--- a/index.html
+++ b/index.html
@@ -1,52 +1,108 @@
-<!DOCTYPE html><html lang="pt-BR"><head><meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1"><title>Grão Digital</title>
-<meta name="theme-color" content="#0d5f34"><link rel="manifest" href="manifest.json">
-<link rel="icon" href="icone-192.png"><link rel="apple-touch-icon" href="icone-192.png">
-<link rel="stylesheet" href="estilo.css"></head><body>
-<div class="overlay" id="overlay"></div>
-<aside class="drawer" id="drawer" aria-hidden="true" aria-label="Menu lateral">
-  <div class="drawer-header"><div class="logo-circle">🌱</div>
-    <div class="drawer-title"><div class="app-name">Grão Digital</div><small class="muted">Menu</small></div>
-    <button class="drawer-close" id="btnCloseDrawer" aria-label="Fechar menu">✕</button></div>
-  <nav class="drawer-nav" role="menu">
-    <button class="drawer-link" data-open="config" role="menuitem">⚙️ Configurações</button>
-    <button class="drawer-link" data-open="politica" role="menuitem">📜 Política de Privacidade</button>
-    <button class="drawer-link" data-open="termos" role="menuitem">📘 Termos de Serviço</button>
-  </nav><footer class="drawer-footer muted">v5.2 • PWA</footer></aside>
-<header class="app-header"><button class="hamburger" id="btnOpenDrawer" aria-label="Abrir menu" aria-haspopup="true" aria-controls="drawer">☰</button>
-<div class="brand"><span class="logo">🌱</span><div class="titles"><h1>Grão Digital</h1><small>Gestão de talhões, aplicações e custos</small></div></div></header>
-<main id="conteudo" class="conteudo">
-<section id="sec-talhoes" class="card"><h2>🌿 Talhões</h2><div class="row gap">
-<input id="nomeTalhao" class="inp" placeholder="Nome do Talhão"><button class="btn" id="btnAddTalhao">Adicionar Talhão</button></div><ul id="listaTalhoes" class="lista"></ul></section>
-<section id="sec-registros" class="card hidden"><h2>🧾 Registros de Adubação</h2><div class="grid grid-4 gap">
-<select id="regTalhao" class="inp"></select><select id="regInsumo" class="inp"></select><input id="regDesc" class="inp" placeholder="Descrição (opcional)">
-<input id="regQtd" class="inp" placeholder="Qtd aplicada (kg)" type="number" min="0" step="0.01"></div><div class="hint">O custo usa o preço do estoque (saco de 50kg).</div>
-<div class="row end"><button id="btnSalvarAplicacao" class="btn">Salvar aplicação</button></div><h3>Últimas aplicações</h3><ul id="listaRegistros" class="lista"></ul></section>
-<section id="sec-estoque" class="card hidden"><h2>📦 Estoque</h2><div class="grid grid-3 gap"><input id="estNome" class="inp" placeholder="Ex.: NPK">
-<input id="estQtd" class="inp" placeholder="Ex.: 1000 (kg)" type="number" min="0" step="0.01"><input id="estPreco" class="inp" placeholder="Preço por saco 50kg (R$)" type="number" min="0" step="0.01"></div>
-<div class="row end"><button id="btnAddEstoque" class="btn">Adicionar ao Estoque</button></div><h3>Itens</h3>
-<table class="tabela" id="tabEstoque"><thead><tr><th>Insumo</th><th>Qtd (kg)</th><th>Preço 50kg (R$)</th><th>Ações</th></tr></thead><tbody></tbody></table></section>
-<section id="sec-resumo" class="card hidden"><h2>📊 Resumo Mensal</h2><div class="grid grid-3 gap"><select id="mesResumo" class="inp"></select>
-<select id="anoResumo" class="inp"></select><div class="row gap"><button id="btnExportCSV" class="btn btn-sec">Exportar CSV</button><button id="btnExportPDF" class="btn btn-sec">Exportar PDF</button></div></div>
-<table class="tabela" id="tabResumo"><thead><tr><th>Talhão</th><th>Insumo</th><th>Kg aplicados</th><th>Gasto (R$)</th><th>Mês/Ano</th></tr></thead><tbody></tbody><tfoot><tr><th colspan="2">Total</th><th id="resKg">0</th><th id="resR$">R$ 0,00</th><th></th></tr></tfoot></table></section>
-<section id="sec-config" class="card hidden"><h2>⚙️ Configurações</h2><div class="card-ghost"><h3>Histórico / Backup</h3>
-<div class="row gap wrap"><button id="btnExportJSON" class="btn btn-sec">Exportar backup (JSON)</button><label class="file"><input type="file" id="inpImportJSON" accept=".json"><span class="btn btn-sec">Importar backup (JSON)</span></label></div></div>
-<div class="card-ghost"><h3>Backup no Google Drive (opcional)</h3><div class="row gap wrap"><button class="btn" id="btnGoogleConectar">Conectar ao Google</button>
-<button class="btn btn-sec" id="btnGoogleSalvar">Salvar no Drive</button><button class="btn btn-sec" id="btnGoogleCarregar">Carregar do Drive</button></div><small class="hint">Usa OAuth do Google Drive. Precisa autorizar na sua conta Google.</small></div></section>
-<section id="sec-politica" class="card hidden"><h2>📜 Política de Privacidade</h2><div class="policy"><p class="muted">Última atualização: Outubro de 2025</p>
-<p>O <strong>Grão Digital</strong> armazena localmente os dados que você insere (talhões, insumos, registros e estoque). Esses dados <strong>não são enviados automaticamente</strong> para servidores externos.</p>
-<p>Se optar por conectar a sua conta Google, o app pedirá permissão somente para criar e atualizar um arquivo chamado <code>grao-digital-backup.json</code> no seu Google Drive e ler esse arquivo para restauração. Nenhum outro arquivo é acessado.</p>
-<p>Não há compartilhamento com terceiros, cookies de rastreamento ou analytics.</p>
-<p>Dúvidas? <a href="mailto:suporte@graodigital.app">suporte@graodigital.app</a>. Versão externa: <a href="politica.html" target="_blank" rel="noopener">politica.html</a></p></div></section>
-<section id="sec-termos" class="card hidden"><h2>📘 Termos de Serviço</h2><div class="policy"><p class="muted">Última atualização: Outubro de 2025</p>
-<p>Ao utilizar o <strong>Grão Digital</strong>, você concorda com estes Termos. O app é fornecido “no estado em que se encontra”, sem garantias.</p>
-<ul><li><strong>Uso e responsabilidade:</strong> Você é responsável pelos dados e pelo uso do app.</li>
-<li><strong>Propriedade dos dados:</strong> Os dados inseridos pertencem a você.</li>
-<li><strong>Armazenamento:</strong> Os dados ficam localmente; Drive é opcional.</li>
-<li><strong>Limitação de responsabilidade:</strong> Não há responsabilidade por perdas decorrentes de falhas ou indisponibilidade.</li>
-<li><strong>Alterações:</strong> Podemos atualizar estes Termos; uso contínuo implica concordância.</li>
-<li><strong>Contato:</strong> <a href="mailto:suporte@graodigital.app">suporte@graodigital.app</a></li></ul>
-<p>Versão externa: <a href="termos.html" target="_blank" rel="noopener">termos.html</a></p></div></section>
+<!doctype html>
+<html lang="pt-BR"><head>
+<meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Grão Digital</title><meta name="theme-color" content="#0e3b22">
+<link rel="manifest" href="manifest.json"><link rel="icon" href="icone.png">
+<link rel="stylesheet" href="style.css"></head>
+<body>
+<header class="hero"><div class="hero-inner">
+  <div class="brand"><img src="icone.png" class="logo" alt="Logo"><h1>Grão Digital</h1></div>
+  <button id="btnMenu" class="icon-btn" aria-label="Abrir menu">☰</button>
+</div></header>
+<nav id="drawer" class="drawer" aria-hidden="true" aria-label="Menu lateral">
+  <div class="drawer-head"><strong>Grão Digital</strong><button id="btnCloseDrawer" class="icon-btn" aria-label="Fechar">✕</button></div>
+  <ul class="drawer-list">
+    <li><button class="drawer-link" data-tab="talhoes">🌿 Talhões</button></li>
+    <li><button class="drawer-link" data-tab="registros">🧾 Registros</button></li>
+    <li><button class="drawer-link" data-tab="estoque">📦 Estoque</button></li>
+    <li><button class="drawer-link" data-tab="resumo">📊 Resumo</button></li>
+    <li><button class="drawer-link" data-action="config">⚙️ Configurações</button></li>
+    <li><button class="drawer-link" data-action="sobre">📘 Sobre o aplicativo</button></li>
+    <li><a class="drawer-link" href="politica.html" target="_blank" rel="noopener">📄 Política de Privacidade</a></li>
+    <li><a class="drawer-link" href="termos.html" target="_blank" rel="noopener">📜 Termos de Serviço</a></li>
+  </ul>
+  <footer class="drawer-foot">Desenvolvido por: Elimaycon Furtado Gomes<br>Versão 6.2</footer>
+</nav>
+<main class="conteudo">
+  <section id="tab-talhoes" class="card tab active"><h2>🌿 Talhões</h2>
+    <div class="grid-3"><input id="nomeTalhao" placeholder="Nome do Talhão"><button id="btnAddTalhao" class="btn primary">Adicionar Talhão</button></div>
+    <ul id="listaTalhoes" class="lista"></ul>
+  </section>
+  <section id="tab-registros" class="card tab"><h2>🧾 Registros de Adubação</h2>
+    <div class="grid-4">
+      <select id="regTalhao"></select>
+      <input id="regInsumo" list="listaInsumos" placeholder="Insumo (vem do estoque)"><datalist id="listaInsumos"></datalist>
+      <input id="regDesc" placeholder="Descrição (opcional)">
+      <input id="regQtd" type="number" step="0.01" min="0" placeholder="Qtd aplicada (kg)">
+      <button id="btnSalvarAplicacao" class="btn primary wide">Salvar aplicação</button>
+    </div>
+    <small class="muted">O custo usa o preço do estoque (saco de 50kg).</small>
+    <h3>Últimas aplicações</h3><ul id="listaRegistros" class="lista"></ul>
+  </section>
+  <section id="tab-estoque" class="card tab"><h2>📦 Estoque</h2>
+    <div class="grid-4">
+      <input id="estNome" placeholder="Ex.: NPK">
+      <input id="estQtd" type="number" step="0.01" min="0" placeholder="Ex.: 1000 (kg)">
+      <input id="estPrecoSaco" type="number" step="0.01" min="0" placeholder="Preço por saco 50kg (R$)">
+      <button id="btnAddEstoque" class="btn primary">Adicionar ao Estoque</button>
+    </div>
+    <table class="tabela"><thead><tr><th>Insumo</th><th>Qtd (kg)</th><th>Preço 50kg (R$)</th><th>Ações</th></tr></thead><tbody id="tbodyEstoque"></tbody></table>
+  </section>
+  <section id="tab-resumo" class="card tab"><h2>📊 Resumo Mensal</h2>
+    <div class="grid-3">
+      <select id="mesResumo"></select><select id="anoResumo"></select>
+      <div class="btns-right"><button id="btnExportCSV" class="btn">Exportar CSV</button><button id="btnExportPDF" class="btn">Exportar PDF</button></div>
+    </div>
+    <table class="tabela">
+      <thead><tr><th>Talhão</th><th>Insumo</th><th>Kg aplicados</th><th>Gasto (R$)</th><th>Mês/Ano</th><th style="width:1%">Ações</th></tr></thead>
+      <tbody id="tabelaResumo"></tbody>
+      <tfoot><tr><td colspan="2">Total</td><td id="totalKg">0</td><td id="totalR$">R$ 0,00</td><td colspan="2"></td></tr></tfoot>
+    </table>
+  </section>
 </main>
-<nav class="bottom-nav"><button data-tab="talhoes" class="nav-btn active">🌿 Talhões</button><button data-tab="registros" class="nav-btn">🧾 Registros</button><button data-tab="estoque" class="nav-btn">📦 Estoque</button><button data-tab="resumo" class="nav-btn">📊 Resumo</button></nav>
-<script src="app.js"></script></body></html>
+<footer class="bottom-nav">
+  <button class="tab-btn active" data-tab="talhoes">🌿 Talhões</button>
+  <button class="tab-btn" data-tab="registros">🧾 Registros</button>
+  <button class="tab-btn" data-tab="estoque">📦 Estoque</button>
+  <button class="tab-btn" data-tab="resumo">📊 Resumo</button>
+</footer>
+<div id="modal" class="modal hidden" aria-hidden="true" role="dialog" aria-modal="true">
+  <div class="modal-overlay"></div>
+  <div class="modal-card">
+    <div class="modal-header"><h3 id="modalTitle">Confirmar</h3><button id="modalClose" class="icon-btn" aria-label="Fechar">✕</button></div>
+    <div id="modalBody" class="modal-body"></div>
+    <div class="modal-footer"><button id="modalCancel" class="btn">Cancelar</button><button id="modalConfirm" class="btn danger">Excluir</button></div>
+  </div>
+</div>
+<div id="modalConfig" class="modal hidden" aria-hidden="true" role="dialog" aria-modal="true">
+  <div class="modal-overlay"></div>
+  <div class="modal-card">
+    <div class="modal-header"><h3>⚙️ Configurações</h3><button class="icon-btn" data-close="config" aria-label="Fechar">✕</button></div>
+    <div class="modal-body">
+      <div class="card inner"><h3>Histórico / Backup</h3>
+        <div class="row"><button id="btnExportarJSON" class="btn">Exportar backup (JSON)</button>
+          <label class="btn">Importar backup (JSON)<input id="inputImportJSON" type="file" accept="application/json" hidden></label>
+        </div>
+      </div>
+      <div class="card inner"><h3>Backup no Google Drive (opcional)</h3>
+        <div class="row"><button id="btnGoogleConectar" class="btn">Conectar ao Google</button>
+          <button id="btnDriveSalvar" class="btn">Salvar no Drive</button>
+          <button id="btnDriveCarregar" class="btn">Carregar do Drive</button>
+        </div>
+      </div>
+      <div class="card inner danger"><h3>Limpeza</h3><button id="btnApagarTudo" class="btn danger">Apagar TODOS os dados</button></div>
+    </div>
+    <div class="modal-footer"><button class="btn" data-close="config">Fechar</button></div>
+  </div>
+</div>
+<div id="modalSobre" class="modal hidden" aria-hidden="true" role="dialog" aria-modal="true">
+  <div class="modal-overlay"></div>
+  <div class="modal-card">
+    <div class="modal-header"><h3>📘 Sobre o aplicativo</h3><button class="icon-btn" data-close="sobre" aria-label="Fechar">✕</button></div>
+    <div class="modal-body"><p><strong>Grão Digital</strong><br>🌱 Versão 6.2<br>Desenvolvido por: <strong>Elimaycon Furtado Gomes</strong><br>Lançado em: Outubro de 2025</p>
+      <p>📧 E-mail de suporte: <em>(defina depois)</em></p></div>
+    <div class="modal-footer"><button class="btn" data-close="sobre">Fechar</button></div>
+  </div>
+</div>
+<script src="app.js"></script>
+</body></html>
